<resources>
    <string name="app_name">Fitness app</string>
    <string name="title_home">Workouts</string>
    <string name="title_dashboard">Your workouts</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_logout">Logout</string>
    <string name="add_exercise_btn">Add exercise</string>
    <string name="add_workout_btn">Add workout</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="date_placeholder">OCT 10 2022</string>
    <string name="time_placeholder">Select time</string>
    <string name="default_exercises">Default exercises</string>
    <string name="custom_exercises">Custom exercises</string>
    <string name="description">Description</string>
    <string name="exercise_count">Count</string>
    <string name="duration">Duration: </string>
    <string name="quantity">Qnt: </string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_images">Add images</string>
    <string name="save_changes">Save changes</string>
    <string name="choose_exercise_type">What exercises do you want to see?</string>
    <string name="default_name">Name</string>
    <string name="empty_exercises">You don\'t have any exercises</string>
    <string name="next_workout">Next workout:</string>
    <string name="no_workouts_today">You don\'t have any workouts today</string>
    <string name="todays_workouts">Today\'s workouts:</string>
    <string name="your_workouts">Your workouts</string>
    <string name="no_workouts">You don\'t have any workouts</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="start">Start</string>
    <string name="time_remaining">Time remaining: </string>
    <string name="stop_workout_title">Stop workout</string>
    <string name="stop_workout_confirmation">Are you sure you want to stop this workout?</string>
    <string name="stop">Stop</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="successful_registration">User has been registered successfully!</string>
    <string name="failed_registration">Failed to register! Try again!</string>
    <string name="verify_email">Check your email to verify your account</string>
    <string name="select_pictures">Select pictures</string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="exercise_timer">Exercise timer: </string>
    <string name="finished_workout">You finished your workout</string>
    <string name="finish_button">Finish</string>


    <string name="empty_name_error">Name cannot be empty</string>
    <string name="incorrect_date_time_error">You cannot set date and time before current</string>
    <string name="empty_description_error">Description cannot be empty</string>
    <string name="no_exercises_error">You should add at least 1 exercise</string>
    <string name="zero_duration_error">Exercise duration cannot be 0</string>
    <string name="zero_exercise_amount">Exercises amount cannot be 0</string>
    <string name="wrong_values">Please enter correct values!</string>
    <string name="delete_exercise_error">You cannot delete this exercise</string>

    <string name="welcome_text">Welcome</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in with google</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password_short">Password must be at least 6 characters long</string>
    <string name="invalid_password_long">Password must be less than 30 characters long</string>
    <string name="login_failed">"Unknown error occurred.Please try again later."</string>
    <string name="invalid_credentials">Failed to login!Please check your credentials.</string>
    <string name="login_google_text">Login with your Google account</string>

    <string name="workout_notification_title">Don\'t miss your today\'s workout: </string>
    <string name="workout_notification_at"> at </string>
</resources>