<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="14dp"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/noWorkoutNotificationLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/addFab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/gray_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/no_workouts"
            android:textSize="18dp"
            android:gravity="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notificationLayout"
        android:layout_width="220dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toTopOf="@+id/addFab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/gray_border">

        <TextView
            android:id="@+id/nextWorkoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/next_workout"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/nextWorkoutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/nextWorkoutText"
            android:inputType="date" />

        <TextView
            android:id="@+id/nextWorkoutTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nextWorkoutText"
            android:layout_toRightOf="@+id/nextWorkoutText" />
    </RelativeLayout>

    <TextView
        android:id="@+id/todaysWorkoutsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todays_workouts"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationLayout" />

    <TextView
        android:id="@+id/noWorkoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_workouts_today"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workoutsRecView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todaysWorkoutsText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        android:backgroundTint="@color/light_purple"
        app:rippleColor="@color/purple_200" />

</androidx.constraintlayout.widget.ConstraintLayout>