<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workout.ViewWorkoutActivity"
    android:paddingLeft="14dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/workoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="TextView"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/date"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutName" />

    <TextView
        android:id="@+id/workoutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/dateText"
        app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toTopOf="@+id/dateText"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/workoutTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/timeText"
        app:layout_constraintStart_toEndOf="@+id/timeText"
        app:layout_constraintTop_toTopOf="@+id/timeText"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"/>


    <TextView
        android:id="@+id/workoutDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeText"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@id/workoutDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/workoutDurationText"
        app:layout_constraintBottom_toBottomOf="@+id/workoutDurationText"
        app:layout_constraintStart_toEndOf="@+id/workoutDurationText"
        app:layout_constraintTop_toTopOf="@+id/workoutDurationText"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"/>


    <RelativeLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/exercisesListLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutDurationText"
        app:layout_constraintVertical_bias="0.35000002">

        <TextView
            android:id="@+id/workoutDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20dp" />


        <LinearLayout
            android:id="@+id/collapsedDescriptionLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workoutDescriptionTitle">

            <TextView
                android:id="@+id/workoutDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="326dp" />

            <ImageButton
                android:id="@+id/expandDescription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_down" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/expandedDescriptionLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workoutDescriptionTitle"
            android:visibility="gone">

            <TextView
                android:id="@+id/workoutExpandedDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="326dp" />

            <ImageButton
                android:id="@+id/collapseDescription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_up" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/exercisesListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutDurationText"
        android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exercisesRecycleView"/>

    </LinearLayout>


    <Button
        android:id="@+id/editWorkoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercisesListLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>