<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercises.CreateExerciseActivity">

    <ImageView
        android:id="@+id/exercisePreviewImg"
        android:layout_width="175dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/default_preview_img" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:minHeight="200dp"
        android:maxWidth="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/exercisePreviewImg"
        app:layout_constraintTop_toTopOf="@+id/exercisePreviewImg"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:id="@+id/exerciseNameLayout"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:id="@+id/exerciseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/exerciseLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseNameLayout">

            <EditText
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="2"
                android:minWidth="48dp"
                android:text="00" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/hoursArrowUp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_up" />

                <ImageButton
                    android:id="@+id/hoursArrowDown"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_down" />
            </LinearLayout>

            <EditText
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="2"
                android:minWidth="48dp"
                android:text="00" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/minutesArrowUp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_up" />

                <ImageButton
                    android:id="@+id/minutesArrowDown"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_down" />
            </LinearLayout>

            <EditText
                android:id="@+id/seconds"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="2"
                android:minWidth="48dp"
                android:text="00" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/secondsArrowUp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_up" />

                <ImageButton
                    android:id="@+id/secondsArrowDown"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_down" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exerciseDurationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:minHeight="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseLength" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/exerciseCountLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseLength"
            app:layout_constraintVertical_bias="0.8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="@string/exercise_count" />

            <EditText
                android:id="@+id/exerciseCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6"
                android:textAlignment="center" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exerciseCountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:minHeight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/exerciseDescriptionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/descriptionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoLayout"
        android:orientation="vertical">
        <EditText
            android:id="@+id/exerciseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/addExerciseBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addExerciseBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/descriptionLayout"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>