<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercises.AddToWorkoutExerciseActivity">

    <ImageView
        android:id="@+id/exercisePreviewImg"
        android:layout_width="175dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/default_preview_img" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:minHeight="200dp"
        android:maxWidth="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/exercisePreviewImg"
        app:layout_constraintTop_toTopOf="@+id/exercisePreviewImg"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exerciseDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseName"
            android:paddingLeft="20dp">

        </TextView>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseName">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:text="@string/exercise_count" />

            <TextView
                android:id="@+id/exerciseCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoLayout"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/exerciseDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />


        <LinearLayout
            android:id="@+id/collapsedDescriptionLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exerciseDescriptionTitle">

            <TextView
                android:id="@+id/exerciseDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="326dp" />

            <ImageButton
                android:id="@+id/expandDescription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_down"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exerciseDescriptionTitle"
            android:id="@+id/expandedDescriptionLayout"
            android:visibility="gone">
            <TextView
                android:id="@+id/exerciseExpandedDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="326dp"/>
            <ImageButton
                android:id="@+id/collapseDescription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_up"/>

        </LinearLayout>


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        android:paddingLeft="14dp"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/editExerciseBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseImages" />
</androidx.constraintlayout.widget.ConstraintLayout>